<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPerson">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="20dp" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/total_amount"
                android:inputType="numberDecimal"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note"
                android:inputType="textMultiLine" />


            <ListView
                android:id="@+id/paymentListView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:divider="#f00"
                android:dividerHeight="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

            <Button
                android:id="@+id/buttonAddPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/add_payment" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/save" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>