<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_payment"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="#7C4DFF"
                android:padding="30dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/editTextPaymentBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                android:hint="@string/amount"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextPaymentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date|number"
                android:padding="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/savePaymentDialogButton"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#64DD17"
                    android:text="@string/save"
                    android:layout_margin="10dp"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/cancelPaymentDialogButton"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="#DD2C00"
                    android:text="@android:string/cancel"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>